syntax = "proto3";

option go_package = "zoomgaming/proto";

// https://developer.mozilla.org/en-US/docs/Web/API/RTCSessionDescription
message SessionDescription {
  // https://pkg.go.dev/github.com/pion/webrtc/v3#SDPType
  enum SDPType {
    option allow_alias = true;
    SDP_TYPE_UNSPECIFIED = 0 ;
    offer = 1;
    SDP_TYPE_OFFER = 1 ;
    pranswer = 2;
    SDP_TYPE_PRANSWER = 2 ;
    answer = 3;
    SDP_TYPE_ANSWER = 3 ;
    rollback = 4;
    SDP_TYPE_ROLLBACK = 4 ;
  }
  SDPType type = 1 [ json_name = "type" ] ;
  // Follows the format specified here: https://tools.ietf.org/html/rfc4566#section-5
  string sdp = 2 [ json_name = "sdp" ] ;
}
